--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
      </audio>
     <div id="app">
       <div id="wrapper">
-        <h1 class="glitch" data-text="lyoni">lyoni</h1>
+        <h1 class="glitch" data-text="chassis">chassis</h1>
       </div>
     </div>
     <div class="marquee-container">
