--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/glitch.css">
     <link rel="stylesheet" type="text/css" href="css/marquee.css">
     <audio src="media/music.mp3"></audio>
-    <title>lyoni.beauty</title>
+    <title>chassis.site</title>
     <style type="text/css">
       body {
           cursor: url("cursor.gif"), auto;
