--- a/index.html
+++ b/index.html
@@ -11,15 +11,6 @@
     <audio src="media/rain_asmr.mp3"></audio>
     <title>chassis.site</title>
     <style type="text/css">
-      body {
-          cursor: url("cursor.gif"), auto;
-      }
-    </style>
-      <style type="text/css">
-        a {
-            cursor: url("cursor2.gif"), default;
-        }
-
         img {
             display: block;
             margin-left: auto;
@@ -36,6 +27,19 @@
         <h1 class="glitch" data-text="chassis">chassis</h1>
       </div>
     </div>
+
+    <div class="drop drop--down">
+      <button class="btn">Dropdown</button>
+      <div class="drop__content">
+        <div class="drop-arrow"></div>
+        <div class="drop-list -size-medium -position-right -border-rounded">
+          <button class="drop-list__btn">Action 1</button>
+          <button class="drop-list__btn">Action 2</button>
+          <button class="drop-list__btn">Action 3</button>
+        </div>
+      </div>
+    </div>
+
     <script type="text/javascript" src="js/music.js"></script>
     <script>
   		var audio = document.getElementById("audio");
