--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/glitch.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <audio src="media/rain_asmr.mp3"></audio>
     <title>chassis.site</title>
     <style type="text/css">
@@ -19,6 +20,18 @@
       </style>
   </head>
   <body>
+  <nav>
+    <p>Chassis</p>
+    <ul>
+      <li><a href="#">Socials</a>
+        <ul>
+          <li><a href="https://www.instagram.com/chassis.gh/">Instagram</a></li>
+          <li><a href="https://www.snapchat.com/add/cstevens2026?share_id=dTS-guSk0XU&locale=en-US">Snapchat</a></li>
+          <li><a href="https://discordapp.com/users/259405254335004685">Discord</a></li>
+          <li><a href="https://t.me/chassis.gh">Telegram</a></li>
+         </ul>
+    </ul>
+  </nav>
   	 <audio id="audio" loop>
         <source src="media/rain_asmr.mp3" type="audio/mp3">
      </audio>
