--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/glitch.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <audio src="media/rain_asmr.mp3"></audio>
+    <audio src="media/rain.mp3"></audio>
     <title>chassis.site</title>
     <style type="text/css">
         img {
@@ -33,7 +33,7 @@
       </ul>
     </nav>
   	  <audio id="audio" loop>
-        <source src="media/rain_asmr.mp3" type="audio/mp3">
+        <source src="media/rain.mp3" type="audio/mp3">
      </audio>
     <div id="app">
       <div id="wrapper">
