--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </li>
     </ul>
   </nav>
-  <svg viewbox="0 0 100 20">
+  <svg viewbox="0 0 100 20" name="viewbox">
     <defs>
       <linearGradient id="gradient" x1="0" x2="0" y1="0" y2="1">
         <stop offset="5%" stop-color="#326384"/>
