--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/wave.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <audio src="media/rain.mp3"></audio>
+    <audio src="media/asmr.mp3"></audio>
     <title>chassis.site</title>
     <style type="text/css">
         img {
@@ -38,7 +37,7 @@
         <stop offset="5%" stop-color="#326384"/>
         <stop offset="95%" stop-color="#123752"/>
       </linearGradient>
-      <pattern id="wave" x="0" y="0" width="120" height="20" patternUnits="userSpaceOnUse">
+      <pattern id="wave" x="0" y="0" width="100%" height="100%" patternUnits="userSpaceOnUse">
         <path id="wavePath" d="M-40 9 Q-30 7 -20 9 T0 9 T20 9 T40 9 T60 9 T80 9 T100 9 T120 9 V20 H-40z" mask="url(#mask)" fill="url(#gradient)"> 
           <animateTransform
               attributeName="transform"
@@ -51,11 +50,11 @@
         </path>
       </pattern>
     </defs>
-    <text text-anchor="middle" x="50" y="14" font-size="12" fill="url(#wave)"  fill-opacity="0.6">CHASSIS</text>
-    <text text-anchor="middle" x="50" y="14" font-size="12" fill="url(#gradient)" fill-opacity="0.1">CHASSIS</text>
+    <text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#wave)"  fill-opacity="0.6">C H A S S I S</text>
+    <text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#gradient)" fill-opacity="0.2">C H A S S I S</text>
   </svg>
   	 <audio id="audio" loop>
-        <source src="media/rain.mp3" type="audio/mp3">
+        <source src="media/asmr.mp3" type="audio/mp3">
      </audio>
     <div id="app">
       <div id="wrapper">
