--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
   <nav>
     <ul>
-      <li><a href="#">Socials</a>
+      <li><a href="#">Socials ⤵</a>
         <ul>
           <li><a href="https://www.instagram.com/chassis.gh/">Instagram</a></li>
           <li><a href="https://www.snapchat.com/add/cstevens2026?share_id=dTS-guSk0XU&locale=en-US">Snapchat</a></li>
