--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <li><a href="https://www.snapchat.com/add/cstevens2026?share_id=dTS-guSk0XU&locale=en-US">Snapchat</a></li>
           <li><a href="https://discordapp.com/users/259405254335004685">Discord</a></li>
           <li><a href="https://t.me/chassis_gh">Telegram</a></li>
+          <li><a href="https://github.com/chassisGH">GitHub</a></li>
         </ul>
       </li>
     </ul>
