--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <audio src="media/asmr.mp3"></audio>
     <title>chassis.site</title>
     <style type="text/css">
-        img {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
+        body{
+          background-image: url(../chassisGH.github.io-main/images/mountains.png);
+          background-size: cover;
+          background-repeat: no-repeat;
         }
     </style>
   </head>
@@ -27,7 +27,6 @@
           <li><a href="https://www.snapchat.com/add/cstevens2026?share_id=dTS-guSk0XU&locale=en-US">Snapchat</a></li>
           <li><a href="https://discordapp.com/users/259405254335004685">Discord</a></li>
           <li><a href="https://t.me/chassis_gh">Telegram</a></li>
-          <li><a href="https://github.com/chassisGH">GitHub</a></li>
         </ul>
       </li>
     </ul>
