--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>chassis.site</title>
     <style type="text/css">
         body{
-          background-image: url(../chassisGH.github.io-main/images/mountains.png);
+          background-image: url(../images/mountains.png);
           background-size: cover;
           background-repeat: no-repeat;
         }
