--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/wave.css">
     <audio src="media/asmr.mp3"></audio>
+    <image src="images/mountains.jpg"></image>
     <title>chassis.site</title>
-    <style type="text/css">
-        body{
-          background-image: url(../images/mountains.png);
-          background-size: cover;
-          background-repeat: no-repeat;
-        }
-    </style>
   </head>
   <body>
+    <style type="text/css">
+      body{
+        background-image: url(../images/mountains.png);
+        background-size: cover;
+        background-repeat: no-repeat;
+      }
+  </style>
   <nav>
     <ul>
       <li><a href="#">Socials ⤵</a>
