--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         </path>
       </pattern>
     </defs>
-    <text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#wave)"  fill-opacity="0.6">C H A S S I S</text>
-    <text text-anchor="middle" x="50" y="15" font-size="17" fill="url(#gradient)" fill-opacity="0.4">C H A S S I S</text>
+    <text text-anchor="middle" x="50" y="15" font-size="1vw" fill="url(#wave)"  fill-opacity="0.6">C H A S S I S</text>
+    <text text-anchor="middle" x="50" y="15" font-size="1vw" fill="url(#gradient)" fill-opacity="0.4">C H A S S I S</text>
   </svg>
   	 <audio id="audio" loop>
         <source src="media/asmr.mp3" type="audio/mp3">
