--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/wave.css">
-    <audio src="media/asmr.mp3"></audio>
+    <audio src="media/money.mp3"></audio>
     <title>chassis.site</title>
   </head>
   <body>
@@ -47,7 +47,8 @@
     <text text-anchor="middle" x="50" y="15" font-size="1vw" fill="url(#gradient)" fill-opacity="0.4">C H A S S I S</text>
   </svg>
   	 <audio id="audio" loop>
-        <source src="media/asmr.mp3" type="audio/mp3">
+        <source src="media/money
+        .mp3" type="audio/mp3">
      </audio>
     <script type="text/javascript" src="js/music.js"></script>
     <script>
