--- a/index.html
+++ b/index.html
@@ -24,28 +24,21 @@
       </li>
     </ul>
   </nav>
-  <svg viewbox="0 0 100 20">
-    <defs>
-      <linearGradient id="gradient" x1="0" x2="0" y1="0" y2="1">
-        <stop offset="5%" stop-color="#326384"/>
-        <stop offset="95%" stop-color="#123752"/>
-      </linearGradient>
-      <pattern id="wave" x="0" y="0" width="100%" height="100%" patternUnits="userSpaceOnUse">
-        <path id="wavePath" d="M-40 9 Q-30 7 -20 9 T0 9 T20 9 T40 9 T60 9 T80 9 T100 9 T120 9 V20 H-40z" mask="url(#mask)" fill="url(#gradient)"> 
-          <animateTransform
-              attributeName="transform"
-              begin="0s"
-              dur="1.5s"
-              type="translate"
-              from="0,0"
-              to="40,0"
-              repeatCount="indefinite"/>
-        </path>
-      </pattern>
-    </defs>
-    <text text-anchor="middle" x="50" y="15" font-size="1vw" fill="url(#wave)"  fill-opacity="0.6">C H A S S I S</text>
-    <text text-anchor="middle" x="50" y="15" font-size="1vw" fill="url(#gradient)" fill-opacity="0.4">C H A S S I S</text>
-  </svg>
+  <div class="container">
+    <svg viewbox="0 0 100 20">
+      <symbol id="s-text">
+      <text text-anchor="middle" x="50%" y="80%">CHASSIS</text>
+    </symbol>
+
+    <g class = "g-ants">
+      <use xlink:href="#s-text" class="text-copy"></use>
+      <use xlink:href="#s-text" class="text-copy"></use>
+      <use xlink:href="#s-text" class="text-copy"></use>
+      <use xlink:href="#s-text" class="text-copy"></use>
+      <use xlink:href="#s-text" class="text-copy"></use>
+    </g>
+    </svg>
+  </div>
   	 <audio id="audio" loop>
         <source src="media/money
         .mp3" type="audio/mp3">
