--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><a href="https://www.instagram.com/chassis.gh/">Instagram</a></li>
           <li><a href="https://discordapp.com/users/259405254335004685">Discord</a></li>
           <li><a href="https://t.me/chassis_gh">Telegram</a></li>
-          <li><a href="https://github.com/chassisGH">GitHub</a></li>
+          <li><a href="https://github.com/chassisGH?tab=repositories">GitHub</a></li>
         </ul>
       </li>
     </ul>
