--- a/index.html
+++ b/index.html
@@ -1,56 +1,52 @@
 <!DOCTYPE html>
 <html onclick="play()" lang="en">
   <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Forum&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="css/wave.css">
-    <audio src="media/money.mp3"></audio>
+    <link rel="stylesheet" type="text/css" href="css/css.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
+    <audio src="media/music.mp3"></audio>
     <title>chassis.site</title>
+      <style type="text/css">
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+      </style>
   </head>
   <body>
-  <nav>
-    <ul>
-      <li><a href="#">Socials ⤵</a>
-        <ul>
-          <li><a href="https://www.instagram.com/chassis.gh/">Instagram</a></li>
-          <li><a href="https://discordapp.com/users/259405254335004685">Discord</a></li>
-          <li><a href="https://t.me/chassis_gh">Telegram</a></li>
-          <li><a href="https://github.com/chassisGH?tab=repositories">GitHub</a></li>
-        </ul>
-      </li>
-    </ul>
-  </nav>
-  <div class="container">
-    <svg viewbox="0 0 150 30" width="device-width" height="device-height">
-      <symbol id="s-text">
-      <text text-anchor="middle" x="50%" y="80%">CHASSIS</text>
-    </symbol>
-
-    <g class = "g-ants">
-      <use xlink:href="#s-text" class="text-copy"></use>
-      <use xlink:href="#s-text" class="text-copy"></use>
-      <use xlink:href="#s-text" class="text-copy"></use>
-      <use xlink:href="#s-text" class="text-copy"></use>
-      <use xlink:href="#s-text" class="text-copy"></use>
-    </g>
-    </svg>
-  </div>
+    <!-- nav-->
+    <nav>
+      <div class="logo">
+        <h4>//chassis.site/</h4>
+      </div>
+      <ul class="nav-links">
+        <li>
+          <a href="#">Services</a>
+        </li>
+        <li>
+          <a href="https://e.rip/chassis" target="_blank">Bio Page</a>
+        </li>
+        <li>
+          <a href="#">Projects</a>
+        </li>
+      </ul>
+    </nav>
+    <!-- nav-->
   	 <audio id="audio" loop>
-        <source src="media/money
-        .mp3" type="audio/mp3">
+        <source src="media/music.mp3" type="audio/mp3">
      </audio>
+    <div id="app">
     <script type="text/javascript" src="js/music.js"></script>
-    <script>
-  		var audio = document.getElementById("audio").loop = true;
+    <script>/*music*/
+  		var audio = document.getElementById("audio");
  	 	audio.volume = 0.1;
-	  </script>
-    <script>
+	</script>
+    <script>/*music*/
       function play() {
-        var audio = document.getElementById("audio").loop = true;
+        var audio = document.getElementById("audio");
         audio.play();
       }
     </script>
