--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="https://e.rip/chassis/" target="_blank">Bio Page</a></li>
-          <li><a href="#">Projects</a></li>
+          <li><a href="https://github.com/chassisGH/">Projects</a></li>
         </ul>
         <div class="burger">
           <div class="line1"></div>
