--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="https://e.rip/chassis/" target="_blank">Bio Page</a></li>
-          <li><a href="/subdomains/projects.html/">Projects</a></li>
+          <li><a href="https://github.com/chassisGH">Projects</a></li>
         </ul>
         <hr class="right"/>
         <div class="burger">
