--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
     <div id="app">
       <h2>
         <span class="magic">
-          <span class="magic-text"><br/>Python API Tools<br/><br/>Webdev<br/><br/>Crypto > Paypal<br/><br/> Middleman</span>
+          <span class="magic-text"><br/>Python API Tools<br/><br/>Webdev<br/><br/>Crypto ➾ Paypal<br/><br/> Middleman</span>
         </span>
       </h2>
     </div>
