--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="https://e.rip/chassis/" target="_blank">Bio Page</a></li>
+          <li><a href="https://e.rip/chassis/" target="_blank">Contact</a></li>
           <li><a href="https://github.com/chassisGH">Projects</a></li>
         </ul>
         <hr class="right"/>
