--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="https://e.rip/chassis/" target="_blank">Contact</a></li>
+          <li><a href="https://solo.to/endearment" target="_blank">Contact</a></li>
         </ul>
         <hr class="right"/>
         <div class="burger">
