--- a/services.html
+++ b/services.html
@@ -40,7 +40,7 @@
     <div id="app">
       <h2>
         <span class="magic">
-          <span class="magic-text"><br/>Webdev<br/><br/>Middleman<br/><br/>Python API Tools<br/><br/> Crypto ➾ Paypal</span>
+          <span class="magic-text"><br/>Middleman<br/><br/>Python API Tools<br/><br/> Crypto EXC</span>
         </span>
       </h2>
     </div>
