--- a/services.html
+++ b/services.html
@@ -22,9 +22,9 @@
       <nav>
         <hr class="left"/>
         <ul class="nav-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="https://solo.to/endearment" target="_blank">Contact</a></li>
+          <li><a href="./">Home</a></li>
+          <li><a href="./services">Services</a></li>
+          <li><a href="./contact" target="_blank">Contact</a></li>
         </ul>
         <hr class="right"/>
         <div class="burger">
