--- a/contact.html
+++ b/contact.html
@@ -22,8 +22,8 @@
       <nav>
         <hr class="left"/>
         <ul class="nav-links">
-          <li><a href="./">Home</a></li>
-          <li><a href="./services">Services</a></li>
+          <li><a href="./" target="_blank">Home</a></li>
+          <li><a href="./services" target="_blank">Services</a></li>
           <li><a href="./contact" target="_blank">Contact</a></li>
         </ul>
         <hr class="right"/>
