--- a/services.html
+++ b/services.html
@@ -22,9 +22,9 @@
       <nav>
         <hr class="left"/>
         <ul class="nav-links">
-          <li><a href="./" target="_blank">Home</a></li>
-          <li><a href="./services" target="_blank">Services</a></li>
-          <li><a href="./contact" target="_blank">Contact</a></li>
+          <li><a href="./">Home</a></li>
+          <li><a href="./services">Services</a></li>
+          <li><a href="./contact">Contact</a></li>
         </ul>
         <hr class="right"/>
         <div class="burger">
