--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html onclick="play()" lang="en">
   <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@1,300&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatibale" content="ie-edge">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/css.css">
-    <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
     <audio src="media/music.mp3"></audio>
     <title>chassis.site</title>
       <style type="text/css">
@@ -18,22 +20,6 @@
       </style>
   </head>
   <body>
-    <!-- nav-->
-      <nav>
-        <hr class="left"/>
-        <ul class="nav-links">
-          <li><a href="./">Home</a></li>
-          <li><a href="./services">Services</a></li>
-          <li><a href="./contact">Contact</a></li>
-        </ul>
-        <hr class="right"/>
-        <div class="burger">
-          <div class="line1"></div>
-          <div class="line2"></div>
-          <div class="line3"></div>
-        </div>
-      </nav>
-    <!-- nav-->
   	 <audio id="audio" loop>
         <source src="media/music.mp3" type="audio/mp3">
      </audio>
@@ -56,9 +42,17 @@
               <path d="M512 255.1c0 11.34-7.406 20.86-18.44 23.64l-171.3 42.78l-42.78 171.1C276.7 504.6 267.2 512 255.9 512s-20.84-7.406-23.62-18.44l-42.66-171.2L18.47 279.6C7.406 276.8 0 267.3 0 255.1c0-11.34 7.406-20.83 18.44-23.61l171.2-42.78l42.78-171.1C235.2 7.406 244.7 0 256 0s20.84 7.406 23.62 18.44l42.78 171.2l171.2 42.78C504.6 235.2 512 244.6 512 255.1z" />
               </svg>
             </span>
-            <span class="magic-text">chassis.site</span>
+            <span class="magic-text">chassis</span>
           </span>
         </h1>
+      </div>
+      <div id="links">
+        <a href="https://t.me/chassis_gh" class="tele" target="_blank">
+          <img src="images/telegram.png" alt="telegram" title="telegram">
+        </a>
+        <a href="discord:941290571878780938?add"class="dc" target="_blank">
+          <img src="images/discord.png" alt="discord" title="discord">
+        </a>
       </div>
     </div>
     <script type="text/javascript" src="js/main.js"></script>
