--- a/index.html
+++ b/index.html
@@ -8,15 +8,17 @@
     <link rel="stylesheet" type="text/css" href="css/css.css">
     <audio src="media/music.mp3"></audio>
     <title>chassis.site</title>
-      <style type="text/css">
-        img {
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-        }
-      </style>
   </head>
   <body>
+    <div id="enter">
+      <b class="begin">chassis.site</b>
+      <b class="begin1">[ click to enter ]</b>
+    </div>
+    <script>
+      document.getElementById("enter").addEventListener("click", function() {
+        document.getElementById("enter").style.opacity = "0";
+      });
+    </script>
     <pre id="header">                         
             88                                             88             
             88                                             ""             
